// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`basic usage 1`] = `
Array [
  Object {
    "apiVersion": "v1",
    "kind": "ServiceAccount",
    "metadata": Object {
      "labels": Object {
        "app.kubernetes.io/instance": "test-sample-00742e24",
        "app.kubernetes.io/managed-by": "Helm",
        "app.kubernetes.io/name": "helm-sample",
        "app.kubernetes.io/version": "1.16.0",
        "helm.sh/chart": "helm-sample-0.1.0",
      },
      "name": "test-sample-00742e24-helm-sample",
    },
  },
  Object {
    "apiVersion": "v1",
    "kind": "Service",
    "metadata": Object {
      "labels": Object {
        "app.kubernetes.io/instance": "test-sample-00742e24",
        "app.kubernetes.io/managed-by": "Helm",
        "app.kubernetes.io/name": "helm-sample",
        "app.kubernetes.io/version": "1.16.0",
        "helm.sh/chart": "helm-sample-0.1.0",
      },
      "name": "test-sample-00742e24-helm-sample",
    },
    "spec": Object {
      "ports": Array [
        Object {
          "name": "http",
          "port": 80,
          "protocol": "TCP",
          "targetPort": "http",
        },
      ],
      "selector": Object {
        "app.kubernetes.io/instance": "test-sample-00742e24",
        "app.kubernetes.io/name": "helm-sample",
      },
      "type": "ClusterIP",
    },
  },
  Object {
    "apiVersion": "apps/v1",
    "kind": "Deployment",
    "metadata": Object {
      "labels": Object {
        "app.kubernetes.io/instance": "test-sample-00742e24",
        "app.kubernetes.io/managed-by": "Helm",
        "app.kubernetes.io/name": "helm-sample",
        "app.kubernetes.io/version": "1.16.0",
        "helm.sh/chart": "helm-sample-0.1.0",
      },
      "name": "test-sample-00742e24-helm-sample",
    },
    "spec": Object {
      "replicas": 1,
      "selector": Object {
        "matchLabels": Object {
          "app.kubernetes.io/instance": "test-sample-00742e24",
          "app.kubernetes.io/name": "helm-sample",
        },
      },
      "template": Object {
        "metadata": Object {
          "labels": Object {
            "app.kubernetes.io/instance": "test-sample-00742e24",
            "app.kubernetes.io/name": "helm-sample",
          },
        },
        "spec": Object {
          "containers": Array [
            Object {
              "image": "nginx:1.16.0",
              "imagePullPolicy": "IfNotPresent",
              "livenessProbe": Object {
                "httpGet": Object {
                  "path": "/",
                  "port": "http",
                },
              },
              "name": "helm-sample",
              "ports": Array [
                Object {
                  "containerPort": 80,
                  "name": "http",
                  "protocol": "TCP",
                },
              ],
              "readinessProbe": Object {
                "httpGet": Object {
                  "path": "/",
                  "port": "http",
                },
              },
              "resources": Object {},
              "securityContext": Object {},
            },
          ],
          "securityContext": Object {},
          "serviceAccountName": "test-sample-00742e24-helm-sample",
        },
      },
    },
  },
]
`;

exports[`values can be specified when defining the chart 1`] = `
Array [
  Object {
    "apiVersion": "v1",
    "kind": "ServiceAccount",
    "metadata": Object {
      "labels": Object {
        "app.kubernetes.io/instance": "test-sample-00742e24",
        "app.kubernetes.io/managed-by": "Helm",
        "app.kubernetes.io/name": "helm-sample",
        "app.kubernetes.io/version": "1.16.0",
        "helm.sh/chart": "helm-sample-0.1.0",
      },
      "name": "test-sample-00742e24-helm-sample",
    },
  },
  Object {
    "apiVersion": "v1",
    "kind": "Service",
    "metadata": Object {
      "labels": Object {
        "app.kubernetes.io/instance": "test-sample-00742e24",
        "app.kubernetes.io/managed-by": "Helm",
        "app.kubernetes.io/name": "helm-sample",
        "app.kubernetes.io/version": "1.16.0",
        "helm.sh/chart": "helm-sample-0.1.0",
      },
      "name": "test-sample-00742e24-helm-sample",
    },
    "spec": Object {
      "ports": Array [
        Object {
          "name": "http",
          "port": 80,
          "protocol": "TCP",
          "targetPort": "http",
        },
      ],
      "selector": Object {
        "app.kubernetes.io/instance": "test-sample-00742e24",
        "app.kubernetes.io/name": "helm-sample",
      },
      "type": "ClusterIP",
    },
  },
  Object {
    "apiVersion": "apps/v1",
    "kind": "Deployment",
    "metadata": Object {
      "labels": Object {
        "app.kubernetes.io/instance": "test-sample-00742e24",
        "app.kubernetes.io/managed-by": "Helm",
        "app.kubernetes.io/name": "helm-sample",
        "app.kubernetes.io/version": "1.16.0",
        "helm.sh/chart": "helm-sample-0.1.0",
      },
      "name": "test-sample-00742e24-helm-sample",
    },
    "spec": Object {
      "replicas": 889,
      "selector": Object {
        "matchLabels": Object {
          "app.kubernetes.io/instance": "test-sample-00742e24",
          "app.kubernetes.io/name": "helm-sample",
        },
      },
      "template": Object {
        "metadata": Object {
          "labels": Object {
            "app.kubernetes.io/instance": "test-sample-00742e24",
            "app.kubernetes.io/name": "helm-sample",
          },
        },
        "spec": Object {
          "containers": Array [
            Object {
              "image": "nginx:1.16.0",
              "imagePullPolicy": "IfNotPresent",
              "livenessProbe": Object {
                "httpGet": Object {
                  "path": "/",
                  "port": "http",
                },
              },
              "name": "helm-sample",
              "ports": Array [
                Object {
                  "containerPort": 80,
                  "name": "http",
                  "protocol": "TCP",
                },
              ],
              "readinessProbe": Object {
                "httpGet": Object {
                  "path": "/",
                  "port": "http",
                },
              },
              "resources": Object {},
              "securityContext": Object {},
            },
          ],
          "nodeSelector": Object {
            "selectMe": "boomboom",
          },
          "securityContext": Object {},
          "serviceAccountName": "test-sample-00742e24-helm-sample",
        },
      },
    },
  },
]
`;
